--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,11 @@
 services:
+  mailhog:
+    image: mailhog/mailhog:v1.0.1
+    hostname: mailhog
+    container_name: mailhog
+    ports:
+      - "25:1025"
+      - "8025:8025"
   db:
     image: jeffersonlab/rfscopedb:0.3.0
     ports:
