--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     'pyepics >= 3.5, < 4.0',
     'pandas >= 1.5, < 3.0',
     'numpy >= 1.24, < 3.0',
+    'PyYAML >= 6.0, < 7.0',
     'rfscopedb@git+https://github.com/JeffersonLab/rfscopedb#egg=v0.3.0'
 ]
 dynamic = ["version"]
