--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "rfwscopedaq"
 authors = [
     {name = "Adam Carpenter", email = "adamc@jlab.org"},
 ]
-description = "Software library for interacting with the RF Scope Waveform Dabase"
+description = "Application for collecting RF waveform data from C100 FCC Scope Mode"
 readme = "README.md"
 requires-python = ">=3.11"
 keywords = ["rf", "RF", "waveform", "Waveform"]
